@@ -2,7 +2,7 @@ name    = PDF-Boxer
 author  = Jason Galea <lecstor@cpan.org>
 license = Perl_5
 copyright_holder = Jason Galea
-version = 0.001
+version = 0.002
 
 [NextRelease]
 [@Git]
