@@ -71,14 +71,20 @@ PDF::Boxer
 
 =head1 DESCRIPTION
 
-Use my version of a "box model" layout to create PDFs.
-Use PDF::Boxer::SpecParser to parse a template written in the not so patented PDFML.
+PDF::Boxer enables the creation of pdf documents using rows, columns, and grids
+for layout. An xml styled document is used to specify the contents of the
+document and is parsed into a block of data by PDF::Boxer::SpecParser and
+passed to PDF::Boxer
+
 Suggestion: Use L<Template> to dynamically create your PDFML template. 
 
 =head1 MARKUP
 
-There should always be a single parent element which would commonly be a column
-allowing other elements to be stacked vertically on the page.
+For a single page document the parent element may be a row, column, or grid.
+Multiple pages can be generated by wrapping more than one of these elements
+with a doc element.
+
+=head2 ELEMENTS
 
 =item column
 
@@ -107,6 +113,52 @@ container if necessary.
 the image element places an image in the PDF.. whoda thunkit, eh?
 the image can be scaled to a percentage of it's original size.
 
+=head2 ATTRIBUTES
+
+=over
+
+=item align
+
+  align="right"
+
+align right or center instead of the default left.
+
+=item background
+
+  background="#FF0000"
+
+background is set as a hexadecimal color.
+
+=item border
+
+border width set in pixels
+
+=item border_color
+
+=item font
+
+=item grow
+
+when set to true, the element will expand to take up any available space.
+
+=item margin, padding, border
+
+size set in pixels as a string for top, right, bottom, left.
+eg:
+  margin="5 10 15 20"; top = 5, right = 10, bottom = 15, left = 20.
+  margin="5 10"; top = 5, right = 10, bottom = 5, left = 10.
+
+margin is space outside the border.
+padding is space inside the border.
+border IS the border..
+
+=item name
+
+I use this for debugging mostly.
+It can be used to get an element object via the box_lookup method.
+
+=back
+
 =method add_to_pdf
 
   $boxer->add_to_pdf($spec);
@@ -116,6 +168,34 @@ Coverts markup to PDF.
 =method finish
 
 Writes the generated PDF to the file specified in the call to new.
+
+=method register_box
+
+each named element is added to an internal register upon creation.
+
+=method box_lookup
+
+  $boxer->box_lookup('elementName');
+
+get an element from the register.
+
+=head1 BUGS
+
+positioning of elements not pixel perfect. eg. in a column the bottom of one
+child overlaps the top of the next by 1 pixel.
+
+=head1 TODO
+
+=over
+
+=item paging
+
+- enable a single element to be nominated for paging so if it's content is too
+large to fit on a page it is continued on the next page.
+
+- enable elements to be marked as first or last page only.
+
+=back
 
 =head1 SEE ALSO
 
@@ -175,13 +255,28 @@ sub add_to_pdf{
   $spec->{boxer} = $weak_me;
   $spec->{debug} = $self->debug;
 
-  my $class = 'PDF::Boxer::Content::'.$spec->{type};
-  my $node = $class->new($spec);
-  $self->register_box($node);
-  $node->initialize;
-#  $node->ruler_h;
-  $node->render;
-  return $node;
+  if ($spec->{type} eq 'Doc'){
+    foreach my $page (@{$spec->{children}}){
+      $page->{boxer} = $weak_me;
+      $page->{debug} = $self->debug;
+      
+      my $class = 'PDF::Boxer::Content::'.$page->{type};
+      my $node = $class->new($page);
+      $self->register_box($node);
+      $node->initialize;
+      $node->render;
+      $self->doc->new_page;
+    }
+  } else {
+    my $class = 'PDF::Boxer::Content::'.$spec->{type};
+    my $node = $class->new($spec);
+    $self->register_box($node);
+    $node->initialize;
+    $node->render;
+  }
+
+  return 1;
+  #return $node;
 }
 
 sub finish{
