@@ -73,24 +73,22 @@ around 'render' => sub{
 
   my @args = $self->scale ? ($self->scale/100) : ($self->image->width, $self->image->height);
 
-  if (my $al = $self->valign){
-    if ($al eq 'top'){
-      $y = $self->content_top - $self->image_height;
-    } elsif ($al eq 'center'){
+  foreach($self->valign || ()){
+    /^top/ && do { $y = $self->content_top - $self->image_height };
+    /^cen/ && do { 
       my $bc = $self->content_top - ($self->content_height / 2);
       my $ic = $self->image_height / 2;
       $y = $bc - $ic;
-    }
+    };
   }
 
-  if (my $al = $self->align){
-    if ($al eq 'right'){
-      $x = $self->content_right - $self->image_width;
-    } elsif ($al eq 'center'){
+  foreach($self->align || ()){
+    /^rig/ && do { $x = $self->content_right - $self->image_width };
+    /^cen/ && do { 
       my $bc = $self->content_left + ($self->content_width / 2);
       my $ic = $self->image_width / 2;
       $x = $bc - $ic;      
-    }
+    };
   }
 
   $gfx->image($img, $x, $y, @args);
